<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">SyncOrgActivity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="downloading">Downloading</string>
    <string name="title">Title</string>
    <string name="no_result">No results</string>
    <string name="priority">Priority</string>
    <string name="todo_state">Todo state</string>
    <string name="scheduled">Scheduled</string>
    <string name="deadline">Deadline</string>
    <string name="no_state">No state</string>
    <string name="cancel">Cancel</string>
    <string name="search_hint">Search</string>
    <string name="warning">WARNING!</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="insert_node">Insert node</string>
    <string name="insert_child_node">Insert child node</string>
    <string name="new_file">Create new file</string>
    <string name="parent_folder">Parent folder</string>
    <string name="specify_parent_folder">Please specify a valid parent folder</string>
    <string name="file">File</string>
    <string name="files">Files</string>
    <string name="delete_node">Delete node</string>
    <string name="filename">Filename</string>
    <string name="details">Details</string>
    <string name="no_node">You have no node in this file:</string>
    <string name="no_todo">Lucky you !\n\nYour TODO list is empty !</string>
    <string name="conflict">Conflict</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="auth_type">Authentication type:</string>
    <string name="file_exists">This file exists already !</string>
    <string name="all_day">All day</string>
    <string name="share_files">Share files</string>
    <string name="folder">Folder: </string>

    <!-- toasts -->
    <string name="unselectable_item">You cannot select this item</string>

    <!-- prompts -->
    <string name="prompt_delete_file">Are you sure you want to delete this file?</string>
    <string name="prompt_delete_files">Are you sure you want to delete these # files?</string>
    <string name="prompt_node_delete">Are you sure you want to delete this node?</string>
    <string name="prompt_cert_changed">The WebDAV Certificate has changed, below are the details.  If you are okay with this click \'Accept\' otherwise click \'Deny\'.  If you accept the new certificate you will need to re-issue your Synchronize command</string>

    <!-- synchronization -->
    <string name="sync_synchronizing_changes">Synchronizing changes</string>
    <string name="sync_failed">Synchronization failed</string>
    <string name="sync_git_merge_files">Conflict\nMerge files : </string>

    <!-- error strings -->
    <string name="error_unsupported_encoding">Encountered unsupported encoding on file %s</string>
    <string name="error_url_fetch_detail">An error occurred attempting to fetch the url %1$s: %2$s</string>
    <string name="error_apg_not_found">APG not found</string>
    <string name="error_apg_version_not_supported">APG version not supported</string>
    <string name="error_transport_error">Git error. This usually happens when there was a problem with the repository. Is the path correct? Is git installed on the server?</string>

    <!-- menu strings -->
    <string name="menu_agenda">Agenda</string>
    <string name="menu_todos">Todos</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_search">Search</string>
    <string name="menu_help">Help</string>
    <string name="menu_cancel">Cancel</string>

    <!-- setup wizard strings -->
    <string name="up_one_level">Up one level</string>
    <string name="please_wait">Please wait…</string>
    <string name="signing_in">Signing in</string>
    <string name="pick_folder">Choose a folder to sync from:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="path">Path</string>
    <string name="login_webdav">Check Login</string>
    <string name="i_want_to_sync_using">I want to sync using:</string>
    <string name="wizard_ssh">an SSH server</string>
    <string name="wizard_null">External/No sync (default)</string>
    <string name="log_in_to_webdav">Log in to your WebDAV server</string>
    <string name="log_in_to_ssh">Log in to your SSH server</string>
    <string name="title_no_sync">External or no synchronization</string>
    <string name="ssh_inform_choose_pub_file">SSH private key</string>
    <string name="url">URL</string>
    <string name="generate_dsa_keys">Generate DSA keys</string>
    <string name="pubkey_copied">Public key copied to clipboard !</string>
    <string name="pick_a_date">If you select a time, you must also select a date.</string>
    <string name="choose_folder">Org files directory:</string>

    <!-- preference strings -->
    <string name="preferences">Preferences</string>
    <string name="preference_actions">Actions</string>
    <string name="preference_general">General</string>
    <string name="preference_other">Other</string>
    <string name="preference_version">Version</string>
    <string name="preference_ubuntuone_login">Login</string>
    <string name="preference_ubuntuone_path">Path</string>
    <string name="preference_ubuntuone_login_summary">Login to retrieve an OAuth token</string>
    <string name="preference_ubuntuone_path_summary">UbuntuOne path to index.org file</string>
    <string name="preference_clear_db_dialog_title">Clear DB?</string>
    <string name="preference_clear_db_dialog_message">Are you sure want to clear DB?
    All unsynchronized files will be lost.</string>
    <string name="preference_calendar">Calendar</string>
    <string name="preference_calendar_display">Display</string>
    <string name="preference_enable_calendar">Enable calendar</string>
    <string name="preference_enable_calendar_summary">Show a Calendar file in the main list of files</string>
    <string name="preference_calendar_show_done_summary">Show items with done TODO keywords the calendar</string>
    <string name="preference_calendar_show_done">Show done events</string>
    <string name="preference_calendar_show_past_summary">Show past items in the calendar</string>
    <string name="preference_calendar_show_past">Show past events</string>
    <string name="preference_setup_wizard">Setup Wizard</string>

    <!-- preference keys -->
    <string name="key_autoSyncInterval">autoSyncInterval</string>
    <string name="key_viewRecursionMax">viewRecursionMax</string>
    <string name="key_defaultTodo">defaultTodo</string>
    <string name="key_theme">theme</string>
    <string name="key_fontSize">fontSize</string>
    <string name="key_syncWifiOnly">syncWifiOnly</string>
    <string name="key_quick_todos">quickTodos</string>
    <string name="key_version">version</string>

    <!-- preference synchronizers (obsolete?) -->
    <string name="configure_synchronizer_settings">Synchronizer settings</string>
    <string name="title_scp_host">Host</string>
    <string name="title_scp_port">Port</string>
    <string name="title_scp_path">Path</string>
    <string name="summary_scp_path">Full path to index.org on the server</string>
    <string name="title_index_file_path">Full local path to index.org</string>
    <string name="summary_web_url">Full URL path to your index.org file</string>
    <string name="copy_old_sync_folder">You are creating a new org note folder. Do you want to copy your current notes in this folder ?</string>
    <string name="no_start_from_scratch">No, start from scratch"</string>
    <!-- directory chooser -->

    <string name="cancel_label">Cancel</string>
    <string name="confirm_label">Confirm</string>
    <string name="selected_folder_label">Selected folder:</string>
    <string name="create_folder_label">Create folder</string>
    <string name="create_folder_msg">Create new folder with name "%1$s"?</string>
    <string name="create_folder_success">Created new folder</string>
    <string name="create_folder_error_no_write_access">Cannot write to this folder</string>
    <string name="create_folder_error_already_exists">Folder already exists</string>
    <string name="create_folder_error">Could not create folder</string>
    <string name="up_label">Up</string>
    <string name="directory_empty">Directory is Empty</string>
    <string name="create_folder_failed">Failed to create folder</string>
    <string name="select_folder">Select Folder</string>
    <string name="create_fs_folder">Create new Folder</string>
    <string name="no_folder_selected">No folder selected</string>


    <!-- others -->


    <string name="wizard_ssh_help">Examples:\n\n

        _ User johndoe wants to sync /home/johndoe/my_notes/ from is private server 123.456.789.123:\n\n
        Username: johndoe\n
        Path: /home/johndoe/my_notes\n
        Host: 123.456.789.123\n
        Port: 22 (or can be let blank)\n\n\n

        _ User johndoe wants to sync with GitHub project johndoe/my_notes.git:\n\n
        Username: git\n
        Path: johndoe/my_notes.git\n
        Host: github.com\n
        Port: 22 (or can be let blank)\n
    </string>


    <string name="upgrade">Update :\n\n
        Files in nested folders are now taken into account.
        Fix indentation issues
        Fix a crash caused by a failed synchronization
   </string>
    <string name="write_permission_denied_warning_title">Warning: Storage permission denied</string>
    <string name="write_permission_denied_warning_content">The "Storage" permission is mandatory to write notes on disk. When denied, the app can not run correctly.
        Please activate it in: Android settings -> Apps -> SyncOrg -> Permissions.</string>
    <string name="title_activity_error_report">ErrorReportActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="wizard_webdav">Webdav server</string>
    <string name="prompt_enter_password">Enter Password</string>

</resources>
